--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "redux-thunk": "^2.4.1",
     "sweetalert2": "^11.4.4",
